force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Locked__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>