force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Max_Amount__c</fullName>
    <label>Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>