force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFP_Color_1_Overage_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFP_Color_1_Overage_Rate__c</fullName>
    <formula>IF( ISPICKVAL( TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__MFPSumofCPCOverageColor1__c / TSGCFG__MPSTotalCPCColorLineItem__c,
IF( TSGCFG__MFPTotalColor1Volume__c &lt;&gt;0, TSGCFG__MFPTotalColor1OveragePrice__c / TSGCFG__MFPTotalColor1Volume__c ,
If(TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0, TSGCFG__MFPSumofCPCOverageColor1__c / TSGCFG__MPSTotalCPCColorLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Color 1 Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>