force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFP_Color_2_CPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFP_Color_2_CPC__c</fullName>
    <formula>IF(ISPICKVAL( TSGCFG__Consolidation_Method__c , &apos;Average&apos;) &amp;&amp; TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__MFPSumofCPCColor2__c / TSGCFG__MPSTotalCPCColorLineItem__c,
IF( ABS(TSGCFG__MFPTotalColor2Volume__c-TSGCFG__MPSTotalVolumeIncludesColor2__c) &lt;&gt;0, TSGCFG__MFPTotalColor2MonthlyCost__c / ABS(TSGCFG__MFPTotalColor2Volume__c-TSGCFG__MPSTotalVolumeIncludesColor2__c),
IF( TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0, TSGCFG__MFPSumofCPCColor2__c / TSGCFG__MPSTotalCPCColorLineItem__c, 0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Color 2 CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>