force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFP_Monthly_Color_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFP_Monthly_Color_Base_Cost__c</fullName>
    <label>MFP Monthly Color Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>