force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFP_Total_Monthly__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFP_Total_Monthly__c</fullName>
    <formula>( TSGCFG__MPSTotalMonoVolume__c * TSGCFG__MPSSumofCPCBW__c) +
( TSGCFG__MPSTotalColorVolume__c * TSGCFG__MPSSumofCPCColor__c) +
( TSGCFG__MFPTotalColor1Volume__c * TSGCFG__MFPSumofCPCColor1__c) +
( TSGCFG__MFPTotalColor2Volume__c * TSGCFG__MFPSumofCPCColor2__c) +
( TSGCFG__MFPTotalColor3Volume__c * TSGCFG__MFPSumofCPCColor3__c) +
( TSGCFG__MFPTotalColor4Volume__c * TSGCFG__MFPSumofCPCColor4__c) +
( TSGCFG__MFPTotalColor5Volume__c * TSGCFG__MFPSumofCPCColor5__c) +
TSGCFG__MFP_Color_1_Total_Base_Rate__c +
TSGCFG__MFP_Color_2_Total_Base_Rate__c +
TSGCFG__MFP_Color_3_Total_Base_Rate__c +
TSGCFG__MFP_Color_4_Total_Base_Rate__c +
TSGCFG__MFP_Color_5_Total_Base_Rate__c +
TSGCFG__MFP_B_W_Total_Base_Rate__c +
TSGCFG__MFP_Color_Total_Base_Rate__c

/* updated 30-05-2023
( TSGCFG__MPSTotalMonoVolume__c * TSGCFG__MPSSumofCPCBW__c) +
( TSGCFG__MPSTotalColorVolume__c * TSGCFG__MPSSumofCPCColor__c) +
( TSGCFG__MFPTotalColor1Volume__c * TSGCFG__MFPSumofCPCColor1__c) +
( TSGCFG__MFPTotalColor2Volume__c * TSGCFG__MFPSumofCPCColor2__c) +
( TSGCFG__MFPTotalColor3Volume__c * TSGCFG__MFPSumofCPCColor3__c) +
( TSGCFG__MFPTotalColor4Volume__c * TSGCFG__MFPSumofCPCColor4__c) +
( TSGCFG__MFPTotalColor5Volume__c * TSGCFG__MFPSumofCPCColor5__c) +
 TSGCFG__MFP_Color_1_Total_Base_Rate__c + TSGCFG__MFP_B_W_Total_Base_Rate__c */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Total Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>