force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFPSumofCPCColor2__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFPSumofCPCColor2__c</fullName>
    <label>MFP Sum of CPC Color 2</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>