force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFPSumofCPCOverageColor1__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFPSumofCPCOverageColor1__c</fullName>
    <label>MFP Sum of CPC Overage Color 1</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>