force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFPTotalColor1OveragePrice__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFPTotalColor1OveragePrice__c</fullName>
    <label>MFP Total Color 1 Overage Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>