force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFPTotalColor3MonthlyCost__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFPTotalColor3MonthlyCost__c</fullName>
    <label>MFP Total Color 3 Monthly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>