force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MFPTotalColor3Volume__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MFPTotalColor3Volume__c</fullName>
    <label>MFP Total Color 3 Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>