force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Min_Amount__c</fullName>
    <label>Min Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>