force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Monthly_Color_Base_Cost__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Monthly_Color_Base_Cost__c</fullName>
    <label>Non-Production Monthly Color Base Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>