force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Monthly_Payment__c</fullName>
    <description>Lease Monthly + Total Service Monthly Payment</description>
    <formula>TSGCFG__Lease_Monthly_Payment__c  +   TSGCFG__ProdMonthlyServicePayment__c +  TSGCFG__TotalServiceMonthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lease Monthly + Total Service Monthly Payment</inlineHelpText>
    <label>Total Lease Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>