force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MonthlyColorPayment__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MonthlyColorPayment__c</fullName>
    <description>Production - Monthly Color Payments</description>
    <inlineHelpText>Production - Monthly Color Payments</inlineHelpText>
    <label>Production Monthly Color Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>