force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MonthlyMonoPayment__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MonthlyMonoPayment__c</fullName>
    <description>Production - Monthly Mono Payment</description>
    <inlineHelpText>Production - Monthly Mono Payment</inlineHelpText>
    <label>Production Monthly Mono Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>