force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPS_Overridden__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPS_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, MPS Rates have been overrridden in one or more of MPS QLIs</inlineHelpText>
    <label>MFP Overridden</label>
    <type>Checkbox</type>
</CustomField>