force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSBWCPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSBWCPC__c</fullName>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__MPSTotalCPCLineItem__c &gt; 0,
			
TSGCFG__MPSSumofCPCBW__c / TSGCFG__MPSTotalCPCLineItem__c ,
			
IF( ABS(TSGCFG__MPSTotalMonoVolume__c - TSGCFG__MPSTotalVolumeIncludesBW__c) &lt;&gt;0, TSGCFG__MFP_Total_BW_Monthly_Cost__c  / ABS(TSGCFG__MPSTotalMonoVolume__c - TSGCFG__MPSTotalVolumeIncludesBW__c),
			
IF(TSGCFG__MPSTotalCPCLineItem__c &gt; 0, TSGCFG__MPSSumofCPCBW__c / TSGCFG__MPSTotalCPCLineItem__c, 0)
)
)


/* NOT IN USE
IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__MPSTotalCPCLineItem__c &gt; 0,
			
TSGCFG__MPSSumofCPCBW__c / TSGCFG__MPSTotalCPCLineItem__c ,
			
IF( TSGCFG__MPSTotalMonoVolume__c &lt;&gt;0, TSGCFG__MFP_Total_BW_Monthly_Cost__c  / TSGCFG__MPSTotalMonoVolume__c,
			
IF(TSGCFG__MPSTotalCPCLineItem__c &gt; 0, TSGCFG__MPSSumofCPCBW__c / TSGCFG__MPSTotalCPCLineItem__c, 0)
)
)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP B&amp;W CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>