force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSBWOverageRate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSBWOverageRate__c</fullName>
    <formula>IF( ISPICKVAL(TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__MPSTotalCPCLineItem__c &gt; 0 ,
TSGCFG__MPSSumofCPCOverageBW__c / TSGCFG__MPSTotalCPCLineItem__c,
IF( TSGCFG__MPSTotalMonoVolume__c &lt;&gt; 0, TSGCFG__MPSTotalBWOveragePrice__c / TSGCFG__MPSTotalMonoVolume__c,
If(TSGCFG__MPSTotalCPCLineItem__c &gt; 0, TSGCFG__MPSSumofCPCOverageBW__c / TSGCFG__MPSTotalCPCLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP B&amp;W Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>