force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSColorCPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSColorCPC__c</fullName>
    <formula>IF(ISPICKVAL( TSGCFG__Consolidation_Method__c , &apos;Average&apos;) &amp;&amp; TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__MPSSumofCPCColor__c / TSGCFG__MPSTotalCPCColorLineItem__c,
IF( ABS(TSGCFG__MPSTotalColorVolume__c - TSGCFG__MPSTotalVolumeIncludesColor__c)&lt;&gt;0, TSGCFG__MPSTotalColorMonthlyCost__c / ABS(TSGCFG__MPSTotalColorVolume__c - TSGCFG__MPSTotalVolumeIncludesColor__c) ,
IF( TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0, TSGCFG__MPSSumofCPCColor__c / TSGCFG__MPSTotalCPCColorLineItem__c, 0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Color CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>