force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSColorOverageRate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSColorOverageRate__c</fullName>
    <formula>IF( ISPICKVAL( TSGCFG__Consolidation_Method__c, &apos;Average&apos;) &amp;&amp; TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__MPSSumofCPCOverageColor__c / TSGCFG__MPSTotalCPCColorLineItem__c,
IF( TSGCFG__MPSTotalColorVolume__c &lt;&gt;0, TSGCFG__MPSTotalColorOveragePrice__c / TSGCFG__MPSTotalColorVolume__c ,
If(TSGCFG__MPSTotalCPCColorLineItem__c &gt; 0, TSGCFG__MPSSumofCPCOverageColor__c / TSGCFG__MPSTotalCPCColorLineItem__c, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MFP Color Overage Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>