force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSSumofCPCColor__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSSumofCPCColor__c</fullName>
    <label>MFP Sum of CPC Color</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>