force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSSumofCPCOverageBW__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSSumofCPCOverageBW__c</fullName>
    <label>MFP Sum of CPC Overage B&amp;W</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>