force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSTotalColorMonthlyCost__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSTotalColorMonthlyCost__c</fullName>
    <label>MFP Total Color Monthly Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>