force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSTotalColorOveragePrice__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSTotalColorOveragePrice__c</fullName>
    <label>MFP Total Color Overage Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>