force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSTotalColorVolume__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSTotalColorVolume__c</fullName>
    <label>MFP Total Color Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>