force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSTotalCPCLineItem__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSTotalCPCLineItem__c</fullName>
    <label>MFP Total CPC Line Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>