force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSTotalMonoVolume__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSTotalMonoVolume__c</fullName>
    <label>MFP Total Mono Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>