force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSTotalVolumeIncludesBW__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSTotalVolumeIncludesBW__c</fullName>
    <label>MFP Total Volume Includes (B/W)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>