force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__MPSTotalVolumeIncludesColor2__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__MPSTotalVolumeIncludesColor2__c</fullName>
    <label>MFP Total Volume Includes (Color) 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>