force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Net_Sale_Cost__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Net_Sale_Cost__c</fullName>
    <description>Total Cost of all items where Sales Rep Credit checkbox is True</description>
    <inlineHelpText>Total Sale Cost of all items for Sales Rep outside all Soft Costs or non sales credit items.</inlineHelpText>
    <label>Net Sale Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>