force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Net_Sale_GP__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Net_Sale_GP__c</fullName>
    <formula>TSGCFG__Net_Sale_Revenue__c - TSGCFG__Net_Sale_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sale GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>