force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Net_Sale_Revenue__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Net_Sale_Revenue__c</fullName>
    <description>Total of all line items where Sales Rep Credit box is True</description>
    <inlineHelpText>Total Sale Credit for Sales Rep outside all Soft Costs or nonsales credit items.</inlineHelpText>
    <label>Net Sale Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>