force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Non_Production_Color_2_Total_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Non_Production_Color_2_Total_Base_Rate__c</fullName>
    <label>Non-Production Color 2 Total Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>