force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Notes__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Notes__c</fullName>
    <description>Notes about this configuration - i.e. financial, Equipment, ...</description>
    <inlineHelpText>Notes about this configuration - i.e. financial, Equipment, ...</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>