force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Other__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Other__c</fullName>
    <description>Total of Initial Fees to the customer</description>
    <inlineHelpText>Total of Initial Fees to the customer</inlineHelpText>
    <label>Other $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>