force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Pool_Group__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Pool_Group__c</fullName>
    <description>Allows users to select a pooling group for each configuration</description>
    <inlineHelpText>Allows users to select a pooling group for each configuration</inlineHelpText>
    <label>Pool Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>