force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Price_Book__c</fullName>
    <label>Price Book</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Large Quantity</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>NJPA</fullName>
            </value>
            <value>
                <fullName>AEPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>