force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Primary__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>