force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Printer_B_W_Total_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Printer_B_W_Total_Base_Rate__c</fullName>
    <label>Printer B/W Total Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>