force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Printer_Color_1_CPC__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Printer_Color_1_CPC__c</fullName>
    <formula>IF(ISPICKVAL( TSGCFG__Consolidation_Method__c , &apos;Average&apos;) &amp;&amp; TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0 ,
TSGCFG__PrinterSumofCPCColor1__c / TSGCFG__PrinterTotalCPCColorLineItem__c,
IF( ABS(TSGCFG__PrinterTotalColor1Volume__c - TSGCFG__PrinterTotalVolumeIncludesColor1__c)&lt;&gt; 0, TSGCFG__PrinterTotalColor1MonthlyCost__c / ABS(TSGCFG__PrinterTotalColor1Volume__c - TSGCFG__PrinterTotalVolumeIncludesColor1__c),
IF( TSGCFG__PrinterTotalCPCColorLineItem__c &gt; 0, TSGCFG__PrinterSumofCPCColor1__c / TSGCFG__PrinterTotalCPCColorLineItem__c, 0
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Printer Color 1 CPC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>