force-app/main/default/objects/TSGCFG__Quote__c/fields/TSGCFG__Printer_Color_1_Total_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSGCFG__Printer_Color_1_Total_Base_Rate__c</fullName>
    <label>Printer Color 1 Total Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>